gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/import22857.d
version https://git-lfs.github.com/spec/v1
oid sha256:0ebc4ca152ef4c1015a3f295edc59ea3f4e2515ba4acd1a75a95f7c8db2f52eb
size 38
